test/npm/typescript/openfl/errors/IllegalOperationErrorTest.ts
import IllegalOperationError from "openfl/errors/IllegalOperationError";
import * as assert from "assert";


describe ("TypeScript | IllegalOperationError", function () {
	
	
	it ("new", function () {
		
		// TODO: Confirm functionality
		
		var illegalOperationError = new IllegalOperationError ();
		assert.notEqual (illegalOperationError, null);
		
	});
	
	
});